--- a/res/layout/areastab.xml
+++ b/res/layout/areastab.xml
@@ -14,7 +14,16 @@
           android:padding="4dp"
           android:hapticFeedbackEnabled="true"
 	 />
-    <ListView
+    <android.gesture.GestureOverlayView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/gestures"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+
+    android:gestureStrokeType="multiple"
+    android:eventsInterceptionEnabled="true"
+    android:orientation="vertical">
+        <ListView
      android:id="@+id/areasList"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
@@ -24,4 +33,5 @@
      android:textSize="16sp"
      
 />
+    </android.gesture.GestureOverlayView>
 </LinearLayout>
