--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -13,6 +13,14 @@
         android:layout_height="fill_parent"
         android:padding="0dp"
         >
+       <Spinner
+	 android:id="@+id/instanceSelector"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+         android:prompt="@string/instances_prompt"
+          android:padding="4dp"
+          android:hapticFeedbackEnabled="true"
+	 />
             <TabWidget
             android:id="@android:id/tabs"
             android:layout_width="fill_parent"
