--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,30 +7,50 @@
         android:background="#303030"
          >
   
-        <LinearLayout
+    <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:padding="0dp"
         >
-       <Spinner
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
+         <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        >
+            <Button
+
+                android:id="@+id/aboutbutton"
+                android:text="  "
+                android:background="@drawable/about_button_sl"
+                android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+
+                               />
+            <Spinner
 	 android:id="@+id/instanceSelector"
-	android:layout_width="fill_parent"
+	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
          android:prompt="@string/instances_prompt"
           android:padding="4dp"
           android:hapticFeedbackEnabled="true"
 	 />
-            <TabWidget
+         </LinearLayout>
+        </RelativeLayout>
+        <TabWidget
             android:id="@android:id/tabs"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
-            <FrameLayout
+        <FrameLayout
             android:id="@android:id/tabcontent"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:padding="5dp"
              android:background="#000000"/>
-        </LinearLayout>
+    </LinearLayout>
 
 </TabHost>
