--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -13,6 +13,24 @@
         android:layout_height="fill_parent"
         android:padding="0dp"
         >
+             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
+            <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        >
+                <TextView
+            android:id="@+id/statusline"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="6pt"
+            android:text="Liqoid - Liquidfeedback for your Android"
+            android:textColor="#30ff80"/>
+            </LinearLayout>
+        </RelativeLayout>
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
@@ -39,7 +57,9 @@
           android:padding="4dp"
           android:hapticFeedbackEnabled="true" />
             </LinearLayout>
+
         </RelativeLayout>
+        
         <TabWidget
             android:id="@android:id/tabs"
             android:layout_width="fill_parent"
@@ -50,6 +70,6 @@
             android:layout_height="fill_parent"
             android:padding="5dp"
              android:background="#000000"/>
+       
     </LinearLayout>
-
 </TabHost>
