--- a/res/menu/inislist_options.xml
+++ b/res/menu/inislist_options.xml
@@ -3,5 +3,7 @@
     <item android:id="@+id/refresh_inislist"
           android:icon="@drawable/ic_menu_refresh"
           android:title="@string/menu_refresh"/>
-
+  <item android:id="@+id/sort_inislist"
+          android:icon="@drawable/ic_menu_refresh"
+          android:title="@string/sortnewestfirst"/>
 </menu>
