--- a/res/layout/areastab.xml
+++ b/res/layout/areastab.xml
@@ -5,7 +5,35 @@
 	android:layout_height="fill_parent"
 	android:orientation="vertical"
 	xmlns:android="http://schemas.android.com/apk/res/android">
-          
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
+        <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        >
+            <Button
+
+                android:id="@+id/aboutbutton"
+                android:text="  "
+                android:background="@drawable/about_button_sl"
+                android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+
+                               />
+            <Spinner
+	 android:id="@+id/instanceSelector"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+         android:prompt="@string/instances_prompt"
+          android:padding="4dp"
+          android:hapticFeedbackEnabled="true" />
+        </LinearLayout>
+
+    </RelativeLayout>
+
   
     <android.gesture.GestureOverlayView
     xmlns:android="http://schemas.android.com/apk/res/android"
