--- a/res/layout/areastab.xml
+++ b/res/layout/areastab.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:padding="0dp"
         >
-            <Button
+            <!--Button
 
                 android:id="@+id/aboutbutton"
                 android:text="  "
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
 
-                               />
+                               / -->
             <Spinner
 	 android:id="@+id/instanceSelector"
 	android:layout_width="match_parent"
