--- a/res/menu/initem_contextmenu.xml
+++ b/res/menu/initem_contextmenu.xml
@@ -3,5 +3,8 @@
     <item android:id="@+id/open_browser_ini"
           android:icon="@drawable/ic_menu_refresh"
           android:title="@string/open_browser"/>
+           <item android:id="@+id/share_ini"
+          android:icon="@drawable/ic_menu_refresh"
+          android:title="@string/share"/>
 
 </menu>
