--- a/res/menu/areaslist_options.xml
+++ b/res/menu/areaslist_options.xml
@@ -3,6 +3,9 @@
     <item android:id="@+id/refresh_areaslist"
           android:icon="@drawable/ic_menu_refresh"
           android:title="@string/menu_refresh"/>
+    <item android:id="@+id/prefs"
+          android:icon="@drawable/ic_menu_info_details"
+          android:title="@string/prefs"/>
     <item android:id="@+id/about"
           android:icon="@drawable/ic_menu_info_details"
           android:title="@string/about"/>
