--- a/res/menu/areaslist_options.xml
+++ b/res/menu/areaslist_options.xml
@@ -4,7 +4,7 @@
           android:icon="@drawable/ic_menu_refresh"
           android:title="@string/menu_refresh"/>
     <item android:id="@+id/prefs"
-          android:icon="@drawable/ic_menu_info_details"
+          android:icon="@drawable/ic_menu_manage"
           android:title="@string/prefs"/>
     <item android:id="@+id/about"
           android:icon="@drawable/ic_menu_info_details"
