--- a/res/layout/areastab.xml
+++ b/res/layout/areastab.xml
@@ -6,14 +6,19 @@
 	android:orientation="vertical"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
-            <Spinner
+    <Spinner
 	 android:id="@+id/instanceSelector"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
          android:prompt="@string/instances_prompt"
           android:padding="4dp"
           android:hapticFeedbackEnabled="true" />
-    
+     <Button
+        android:id="@+id/addinstance"
+        android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+        android:text=" "
+            />
 
   
     <android.gesture.GestureOverlayView
@@ -25,13 +30,12 @@
     android:gestureStrokeType="multiple"
     android:eventsInterceptionEnabled="true"
     android:orientation="vertical">
+       
         <ListView
      android:id="@+id/areasList"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
-         android:layout_weight="1"
-        android:drawSelectorOnTop="false"
-      
+        android:drawSelectorOnTop="true"
      
 />
     </android.gesture.GestureOverlayView>
