Smaller tabs + titles for pages

--- a/res/drawable/ic_tab_upcoming.xml
+++ b/res/drawable/ic_tab_upcoming.xml
@@ -4,5 +4,5 @@
     <!-- item android:drawable="@drawable/ic_menu_rotate_green"
            android:state_selected="true"/ -->
     <!-- When not selected, use white-->
-    <item android:drawable="@drawable/ic_menu_rotate" />
+    <!-- item android:drawable="@drawable/ic_menu_rotate" /-->
 </selector>
