--- a/res/drawable/ic_tab_areas.xml
+++ b/res/drawable/ic_tab_areas.xml
@@ -4,5 +4,5 @@
     <!-- item android:drawable="@drawable/ic_menu_archive_green"
           android:state_selected="true"   / -->
     <!-- When not selected, use white-->
-    <item android:drawable="@drawable/ic_menu_archive" />
+    <!--item android:drawable="@drawable/ic_menu_archive" / -->
 </selector>
