--- a/res/drawable/ic_tab_recent.xml
+++ b/res/drawable/ic_tab_recent.xml
@@ -4,5 +4,5 @@
     <!-- item android:drawable="@drawable/ic_menu_recent_history_green"
           android:state_selected="true" / -->
     <!-- When not selected, use white-->
-    <item android:drawable="@drawable/ic_menu_recent_history" />
+    <!-- item android:drawable="@drawable/ic_menu_recent_history" /-->
 </selector>
