--- a/res/layout/initiativentab.xml
+++ b/res/layout/initiativentab.xml
@@ -4,9 +4,19 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:orientation="vertical"
-	xmlns:android="http://schemas.android.com/apk/res/android">
-          
-  
+	 android:background="#fff5f5f5"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+       
+    <TextView
+         android:id="@+id/tabinis_title"
+
+        android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+        android:text="@string/tab_inis"
+        android:textColor="#009010"
+         android:gravity="center_vertical|center_horizontal"
+        android:textSize="20dp"
+                />
     <android.gesture.GestureOverlayView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/allinisgestures"
