--- a/res/layout/initiativentab.xml
+++ b/res/layout/initiativentab.xml
@@ -26,14 +26,12 @@
     android:gestureStrokeType="multiple"
     android:eventsInterceptionEnabled="true"
     android:orientation="vertical">
-        <ListView
+        <eu.erikw.PullToRefreshListView
      android:id="@+id/initiativenList"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
          android:layout_weight="1"
-        android:drawSelectorOnTop="false"
-      
-     
+    
 />
     </android.gesture.GestureOverlayView>
 </LinearLayout>
