--- a/res/layout/initiativentab.xml
+++ b/res/layout/initiativentab.xml
@@ -31,6 +31,8 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
          android:layout_weight="1"
+           android:background="@android:color/white"
+        android:cacheColorHint="@android:color/white"
     
 />
     </android.gesture.GestureOverlayView>
