--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2,6 +2,27 @@
 
 <resources>
 
+ <string-array name="limitInMins">
+        <item name="1">One minute</item>
+        <item name="2">2 minutes</item>
+        <item name="3">3 minutes</item>
+        <item name="5">5 minutes</item>
+        <item name="10">10 minutes</item>
+        <item name="20">20 minutes</item>
+        <item name="60">1 hour</item>
+    </string-array>
+
+    <string-array name="limitInMinsValues">
+        <item name="1">60000</item>
+        <item name="2">120000</item>
+        <item name="3">180000</item>
+        <item name="5">300000</item>
+        <item name="10">600000</item>
+        <item name="20">1200000</item>
+        <item name="60">3600000</item>
+    </string-array>
+
+
     <string-array name="limitInDays">
         <item name="0.1">One hour</item>
         <item name="0.2">2 hours</item>
