--- a/res/layout/initiativentab.xml
+++ b/res/layout/initiativentab.xml
@@ -15,7 +15,8 @@
         android:text="@string/tab_inis"
         android:textColor="#009010"
          android:gravity="center_vertical|center_horizontal"
-        android:textSize="20dp"
+        android:textStyle="bold"
+        android:textSize="18dp"
                 />
     <android.gesture.GestureOverlayView
     xmlns:android="http://schemas.android.com/apk/res/android"
