--- a/res/xml/globalprefsscreen.xml
+++ b/res/xml/globalprefsscreen.xml
@@ -15,7 +15,13 @@
             android:key="pulltorefresh"
             android:summary="Enable or disable Pull-to-refresh lists"
             android:title="Enable Pull-To-Refresh"
-            android:defaultValue="true"
+            android:defaultValue="false"
+        />
+        <CheckBoxPreference
+            android:key="animations"
+            android:summary="Enable or disable animations"
+            android:title="Animations"
+            android:defaultValue="false"
         />
         <ListPreference
             android:key="redlimit"
