--- a/res/menu/areaslist_options.xml
+++ b/res/menu/areaslist_options.xml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item 
+    <item
           android:id="@+id/refresh_areaslist"
           android:icon="@drawable/ic_menu_refresh"
           android:title="@string/menu_refresh"/>
-    <item 
+    
+    <item
           android:id="@+id/unlock_instance"
           android:icon="@drawable/ic_menu_login"
           android:title="@string/menu_unlock_instance"/>
-    <item 
+    <item
           android:id="@+id/lock_instance"
           android:icon="@drawable/ic_menu_block"
           android:title="@string/menu_lock_instance"/>
+       
+  
     <item
           android:id="@+id/prefs"
          android:icon="@android:drawable/ic_menu_manage"
           android:title="@string/prefs"/>
+    <item
+          android:id="@+id/clearcache"
+         android:icon="@android:drawable/ic_menu_close_clear_cancel"
+          android:title="@string/clearcache"/>
     <item
           android:id="@+id/about"
           android:icon="@android:drawable/ic_menu_info_details"
