--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -10,6 +10,10 @@
         <item name="10">10 minutes</item>
         <item name="20">20 minutes</item>
         <item name="60">1 hour</item>
+         <item name="0.2">2 hours</item>
+        <item name="0.6">6 hours</item>
+        <item name="0.12">12 hours</item>
+        <item name="0.24">One day</item>
     </string-array>
 
     <string-array name="limitInMinsValues">
@@ -20,6 +24,10 @@
         <item name="10">600000</item>
         <item name="20">1200000</item>
         <item name="60">3600000</item>
+         <item name="0.2">7200000</item>
+        <item name="0.6">21600000</item>
+        <item name="0.12">43200000</item>
+        <item name="0.24">86400000</item>
     </string-array>
 
 
