--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2,7 +2,7 @@
 
 <resources>
 
- <string-array name="limitInMins">
+    <string-array name="limitInMins">
         <item name="1">One minute</item>
         <item name="2">2 minutes</item>
         <item name="3">3 minutes</item>
@@ -10,7 +10,7 @@
         <item name="10">10 minutes</item>
         <item name="20">20 minutes</item>
         <item name="60">1 hour</item>
-         <item name="0.2">2 hours</item>
+        <item name="0.2">2 hours</item>
         <item name="0.6">6 hours</item>
         <item name="0.12">12 hours</item>
         <item name="0.24">One day</item>
@@ -24,7 +24,31 @@
         <item name="10">600000</item>
         <item name="20">1200000</item>
         <item name="60">3600000</item>
-         <item name="0.2">7200000</item>
+        <item name="0.2">7200000</item>
+        <item name="0.6">21600000</item>
+        <item name="0.12">43200000</item>
+        <item name="0.24">86400000</item>
+    </string-array>
+
+    <string-array name="limitInMins10">
+        <item name="5">5 minutes</item>
+        <item name="10">10 minutes</item>
+        <item name="15">15 minutes</item>
+        <item name="20">20 minutes</item>
+        <item name="60">1 hour</item>
+        <item name="0.2">2 hours</item>
+        <item name="0.6">6 hours</item>
+        <item name="0.12">12 hours</item>
+        <item name="0.24">One day</item>
+    </string-array>
+
+    <string-array name="limitInMinsValues10">
+        <item name="5">300000</item>
+        <item name="10">600000</item>
+        <item name="15">900000</item>
+        <item name="20">1200000</item>
+        <item name="60">3600000</item>
+        <item name="0.2">7200000</item>
         <item name="0.6">21600000</item>
         <item name="0.12">43200000</item>
         <item name="0.24">86400000</item>
